examples/test/testpolicy7553.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7553
  namespace: namespace174
spec:
  podSelector:
    matchLabels:
      key43: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value23
          key26: value5
      podSelector:
        matchLabels:
          key41: value23
          key26: value23
